--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gulp": "^3.7.0",
     "gulp-coffee": "^2.0.1",
     "gulp-livereload": "^2.1.0",
-    "gulp-plumber": "^0.6.2"
+    "gulp-plumber": "^0.6.2",
+    "gulp-uglify": "^0.3.0"
   }
 }
