--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "gulp-coffee": "^2.0.1",
     "gulp-livereload": "^2.1.0",
     "gulp-plumber": "^0.6.2",
-    "gulp-uglify": "^0.3.0"
+    "gulp-uglify": "^0.3.0",
+    "gulp-compass": "^1.1.9",
+    "gulp-filter": "^0.4.1",
+    "gulp-minify-css": "^0.3.4"
   }
 }
